deploy/ip-features.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-backend-ip-features
  namespace: label-studio
  labels:
    app: ml-backend-ip-features
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-backend-ip-features
  template:
    metadata:
      labels:
        app: ml-backend-ip-features
    spec:
      containers:
      - name: ml-backend-ip-features
        image: gitlab.startorus.org:5050/scientific-computing/toklabel/ml-backend/ip_features:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        resources:
          limits:
            memory: "4096Mi"
            cpu: "2000m"
          requests:
            memory: "512Mi"
            cpu: "250m"


---
apiVersion: v1
kind: Service
metadata:
  name: ml-backend-ip-features
  namespace: label-studio
  labels:
    app: ml-backend-ip-features
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: ml-backend-ip-features



# ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-backend-ip-features
  namespace: label-studio
  labels:
    app: ml-backend-ip-features
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dap0.lan
    http:
      paths:
        - path: /ml-backend-ip-features(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: ml-backend-ip-features
              port:
                number: 9090
