deploy/plasma-mask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-backend-plasma-mask
  namespace: label-studio
  labels:
    app: ml-backend-plasma-mask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-backend-plasma-mask
  template:
    metadata:
      labels:
        app: ml-backend-plasma-mask
    spec:
      containers:
      - name: ml-backend-plasma-mask
        image: gitlab.startorus.org:5050/scientific-computing/toklabel/ml-backend/plasma_mask:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: huggingface-cache-volume
          mountPath: /root/.cache/huggingface/hub
        resources:
          limits:
            memory: "4096Mi"
            cpu: "2000m"
          requests:
            memory: "512Mi"
            cpu: "250m"
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: ml-backend-plasma-mask-pvc
      - name: huggingface-cache-volume
        persistentVolumeClaim:
          claimName: huggingface-cache-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: ml-backend-plasma-mask
  namespace: label-studio
  labels:
    app: ml-backend-plasma-mask
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: ml-backend-plasma-mask



# ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-backend-plasma-mask
  namespace: label-studio
  labels:
    app: ml-backend-plasma-mask
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dap0.lan
    http:
      paths:
        - path: /ml-backend-plasma-mask(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: ml-backend-plasma-mask
              port:
                number: 9090
